# plotboard

./: .gitignore  LICENSE  README.md  app.py  parser.py  plotter.py  presets.py  pyproject.toml  requirements.txt  stats.py  utils.py
logo/: generate_logo.py  generate_logo_v2.py
