[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plotboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.10",
    "pingouin>=0.5",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
